added butter webmaker-x branch as a git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "slowparse"]
 	path = slowparse
 	url = git://github.com/mozilla/slowparse.git
+[submodule "butter"]
+	path = butter
+	url = git://github.com/secretrobotron/butter.git
